  -- this plugin currently only supports accounts created with Hive itself. oAuth based authentication (using Google and the like) is therefore, not supported.
* Updated Oboom.com (plugin was broken/outdated).
* Adding support of FilePup.net (with and without account support).

==== v 3.5.0 ====
* Disabled several (18) dead file-hosts from NU's interface.
* Fixed CatShare.net (plugin was outdated).
* NU-CMD: Developed a minimalist command-line version of NU (WIP).
* NU-CMD: Added new command-line arguments -f file, -h host, -help
* Fixed some project property entries (changed target Java version back to 1.7).
* Added ToutBox.fr (account only).
* Made small changes to the ToutBox.fr plugin.
* Updated SendSpace.com (plugin re-written from scratch).
* Fixed SendSpace.com (upload logic).
* Added a new callable utility class to remove cryptography restrictions.
* Updated SendSpace.com (cryptography restrictions removed).
* Removed advertisements from the application.
* Updated NeembuuUploader.java (cleaned up).
* Updated OpenLoad.io (moved to OpenLoad.co).
* Updated HiVe.im (WIP).
* Updated changes.txt and preparing for v3.5 release.

==== v 3.4.0 ====
* Updated Uploaded.net (now generates descriptive links instead of the short ul.to links).
* FEATURE: added a new "upload folder" feature wherein users can now select a particular folder and, 
NU will detect and select all files within it, and therefore, 
enable the users to seamlessly upload all files within a given folder (including all files within sub-directories).
* GUI: Replaced the previously used "plain" buttons for selecting files (and folders) with two, new, visually appealing images.
* GUI: Adjusted the size and placement of the "LOG" button and fixed some display issues.
* Fixed a bug with the newly added "upload folder" feature (no longer affects the select files option negatively).
* Updated RockFile.eu (increased max. filesize limit per file from 1GB to 2GB).
* Added JheBerg.net (with and without account).