@@ -18,22 +18,19 @@ import neembuu.uploader.httpclient.httprequest.NUHttpPost;
 import neembuu.uploader.interfaces.UploadStatus;
 import neembuu.uploader.interfaces.UploaderAccountNecessary;
 import neembuu.uploader.interfaces.abstractimpl.AbstractUploader;
-import neembuu.uploader.uploaders.common.FileUtils;
 import neembuu.uploader.uploaders.common.StringUtils;
-import neembuu.uploader.utils.CookieUtils;
+import neembuu.uploader.utils.NUHttpClientUtils;
 import neembuu.uploader.utils.NULogger;
 import org.apache.http.HttpEntity;
 import org.apache.http.HttpResponse;
-import org.apache.http.client.CookieStore;
 import org.apache.http.client.HttpClient;
-import org.apache.http.client.protocol.ClientContext;
 import org.apache.http.entity.mime.HttpMultipartMode;
 import org.apache.http.entity.mime.MultipartEntity;
 import org.apache.http.entity.mime.content.StringBody;
-import org.apache.http.impl.client.BasicCookieStore;
 import org.apache.http.protocol.BasicHttpContext;
 import org.apache.http.protocol.HttpContext;
 import org.apache.http.util.EntityUtils;
+import org.json.JSONObject;
 
 /**
  *
@@ -41,21 +38,21 @@ import org.apache.http.util.EntityUtils;
  * @author davidepastore
  */
 @SmallModule(
-    exports={Letitbit.class,LetitbitAccount.class},
-    interfaces={Uploader.class,Account.class},
-    name="Letitbit.net"
+        exports = {Letitbit.class, LetitbitAccount.class},
+        interfaces = {Uploader.class, Account.class},
+        name = "Letitbit.net"
 )
 public class Letitbit extends AbstractUploader implements UploaderAccountNecessary {
 
     LetitbitAccount letitbitAccount = (LetitbitAccount) getAccountsProvider().getAccount("Letitbit.net");
-    
+
     private final HttpClient httpclient = NUHttpClient.getHttpClient();
     private HttpContext httpContext = new BasicHttpContext();
     private HttpResponse httpResponse;
     private NUHttpPost httpPost;
     private NUHttpGet httpGet;
     private String stringResponse;
-    
+
     private String tmp;
     private String phpsessioncookie, debugcookie = "", downloadlink = "", deletelink = "";
     private String server, postURL = "";
@@ -68,35 +65,25 @@ public class Letitbit extends AbstractUploader implements UploaderAccountNecessa
     public Letitbit() {
 
         downURL = UploadStatus.PLEASEWAIT.getLocaleSpecificString();
-        delURL = UploadStatus.PLEASEWAIT.getLocaleSpecificString();
+        delURL = UploadStatus.NA.getLocaleSpecificString();
         host = "Letitbit.net";
         //It has to be successful.. as it won't work without login
         if (letitbitAccount.loginsuccessful) {
             host = letitbitAccount.username + " | Letitbit.net";
         }
-        
+
         maxFileSizeLimit = 2147483647; //2 GB
     }
 
     private void initialize() throws Exception {
-        CookieStore cookieStore = new BasicCookieStore();
-        httpContext.setAttribute(ClientContext.COOKIE_STORE, cookieStore);
-        NULogger.getLogger().info("Getting startup cookie from letitbit.net");
-        stringResponse =  getData("http://www.letitbit.net/");
-        
-        if(CookieUtils.existCookie(httpContext, "PHPSESSID")){
-            phpsessioncookie = CookieUtils.getCookieNameValue(httpContext, "PHPSESSID");
-        }
-        
-        if(CookieUtils.existCookie(httpContext, "debug_panel")){
-            debugcookie = CookieUtils.getCookieNameValue(httpContext, "PHPSESSID");
-        }
+        stringResponse = NUHttpClientUtils.getGzipedData("http://newlib.wm-panel.com/wm-panel/file-manager-new#all", httpContext);
 
-        NULogger.getLogger().log(Level.INFO, "phpsessioncookie: {0}", phpsessioncookie);
-        NULogger.getLogger().log(Level.INFO, "debugcookie : {0}", debugcookie);
-        
-        server = StringUtils.stringBetweenTwoStrings(stringResponse, "ACUPL_UPLOAD_SERVER = '", "'");
+        //CookieUtils.printCookie(httpContext);
+        //FileUtils.saveInFile("Letitbit.html", stringResponse);
+        server = StringUtils.stringBetweenTwoStrings(stringResponse, "t.server = '", "'");
         base = StringUtils.stringBetweenTwoStrings(stringResponse, "\"base\" type=\"hidden\" value=\"", "\"");
+        pin = StringUtils.stringBetweenTwoStrings(stringResponse, "\"pin\" id=\"upload_form_pin\" type=\"hidden\" value=\"", "\"");
+        NULogger.getLogger().log(Level.INFO, "pin : {0}", pin);
         NULogger.getLogger().log(Level.INFO, "base : {0}", base);
         generateLetitbitID();
         NULogger.getLogger().log(Level.INFO, "server : {0}", server);
@@ -121,29 +108,6 @@ public class Letitbit extends AbstractUploader implements UploaderAccountNecessa
         uid = sb.toString();
     }
 
-    private void getData() throws Exception {
-        stringResponse =  getData("http://www.letitbit.net/");
-        
-        //CookieUtils.printCookie(httpContext);
-        //FileUtils.saveInFile("Letitbit.html", stringResponse);
-        server = StringUtils.stringBetweenTwoStrings(stringResponse, "ACUPL_UPLOAD_SERVER = '", "'");
-        base = StringUtils.stringBetweenTwoStrings(stringResponse, "\"base\" type=\"hidden\" value=\"", "\"");
-        pin = StringUtils.stringBetweenTwoStrings(stringResponse, "\"pin\" type=\"hidden\" value=\"", "\"");
-        NULogger.getLogger().log(Level.INFO, "pin : {0}", pin);
-        NULogger.getLogger().log(Level.INFO, "base : {0}", base);
-        generateLetitbitID();
-        NULogger.getLogger().log(Level.INFO, "server : {0}", server);
-        postURL = "http://" + server + "/marker=" + uid;
-        NULogger.getLogger().log(Level.INFO, "Post URL :{0}", postURL);
-    }
-
-    private String getData(String geturl) throws Exception {
-        httpGet = new NUHttpGet(geturl);
-            
-        httpResponse = httpclient.execute(httpGet, httpContext);
-        return EntityUtils.toString(httpResponse.getEntity());
-    }
-
     private void fileUpload() throws Exception {
         httpPost = new NUHttpPost(postURL);
         MultipartEntity mpEntity = new MultipartEntity(HttpMultipartMode.BROWSER_COMPATIBLE);
@@ -152,6 +116,8 @@ public class Letitbit extends AbstractUploader implements UploaderAccountNecessa
         mpEntity.addPart("pin", new StringBody(pin));
         mpEntity.addPart("base", new StringBody(base));
         mpEntity.addPart("host", new StringBody("letitbit.net"));
+        mpEntity.addPart("source", new StringBody("newlib.wm-panel.com"));
+        mpEntity.addPart("folder", new StringBody(""));
         mpEntity.addPart("file0", createMonitoredFileBody());
         httpPost.setEntity(mpEntity);
         NULogger.getLogger().log(Level.INFO, "executing request {0}", httpPost.getRequestLine());
@@ -169,49 +135,39 @@ public class Letitbit extends AbstractUploader implements UploaderAccountNecessa
 
     @Override
     public void run() {
-
-        if (letitbitAccount.loginsuccessful) {
-            host = letitbitAccount.username + " | Letitbit.net";
-        } else {
-            host = "Letitbit.net";
-            uploadInvalid();
-            return;
-        }
-
-
         try {
+            if (letitbitAccount.loginsuccessful) {
+                host = letitbitAccount.username + " | Letitbit.net";
+                httpContext = letitbitAccount.getHttpContext();
+                uploadInitialising();
+                initialize();
+            } else {
+                host = "Letitbit.net";
+                uploadInvalid();
+                return;
+            }
+
             if (file.length() > maxFileSizeLimit) {
                 throw new NUMaxFileSizeException(maxFileSizeLimit, file.getName(), getHost());
             }
-            
-            uploadInitialising();
-            if (letitbitAccount.loginsuccessful) {
-                httpContext = letitbitAccount.getHttpContext();
-                getData();
-            } else {
-                initialize();
-            }
+
             fileUpload();
             gettingLink();
-            uploadresponse = "http://letitbit.net/acupl_proxy.php?srv=" + server + "&uid=" + uid;
-            tmp = getData(uploadresponse);
-            // NULogger.getLogger().info("upload response : "+uploadresponse);
-            tmp = StringUtils.stringBetweenTwoStrings(tmp, "\"post_result\": \"", "\"");
-            NULogger.getLogger().log(Level.INFO, "upload page : {0}", tmp);
-            uploadpage = getData(tmp);
-//            NULogger.getLogger().info(uploadpage);
-            downloadlink = StringUtils.stringBetweenTwoStrings(uploadpage, "Links to download files:", "</textarea>");
-            downloadlink = downloadlink.substring(downloadlink.lastIndexOf(">") + 1);
-            deletelink = StringUtils.stringBetweenTwoStrings(uploadpage, "Links to delete files:", "</div>");
-            deletelink = deletelink.replace("<br/>", "");
-            deletelink = deletelink.substring(deletelink.lastIndexOf(">") + 1);
+            JSONObject uploadresponsejson = new JSONObject(uploadresponse);
+            String downloadcode = (String) uploadresponsejson.getJSONArray("uids").getString(0);
+
+            downloadlink = new StringBuilder("http://letitbit.net/download/")
+                    .append(downloadcode)
+                    .append("/")
+                    .append(getFileName())
+                    .append(".html").toString();
+
             NULogger.getLogger().log(Level.INFO, "Download Link : {0}", downloadlink);
-            NULogger.getLogger().log(Level.INFO, "Delete Link : {0}", deletelink);
+            NULogger.getLogger().log(Level.INFO, "Delete Link : {0}", delURL);
             downURL = downloadlink;
-            delURL = deletelink;
 
             uploadFinished();
-        } catch(NUException ex){
+        } catch (NUException ex) {
             ex.printError();
             uploadInvalid();
         } catch (Exception e) {
